--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "lib"
   ],
   "types": "lib/index.d.ts",
-  "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0"
-  },
+  "license": "MIT",
   "keywords": [
+    "string",
     "DOM",
+    "converter",
     "react",
     "component"
   ],
+  "peerDependencies": {
+    "react": "^15.0.0 || ^16.0.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
@@ -46,17 +49,18 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
+    "@types/react-dom": "^16.8.5",
     "babel-jest": "^24.8.0",
     "bundlesize": "^0.18.0",
     "chalk": "^2.4.2",
     "cross-env": "^5.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "fetch-mock": "^7.3.7",
+    "fetch-mock": "^7.3.9",
     "husky": "^3.0.1",
     "is-ci-cli": "^1.1.1",
     "jest": "^24.8.0",
@@ -86,7 +90,7 @@
     "test": "is-ci \"test:coverage\" \"test:watch\"",
     "test:coverage": "jest --coverage --bail",
     "test:watch": "jest --watch --verbose",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "tslint 'src/**/*.ts?(x)' 'test/**/*.ts?(x)' 'tools/**/*.ts?(x)'",
     "format": "prettier \"**/*.{js,jsx,json,yml,yaml,css,less,scss,ts,tsx,md,graphql,mdx}\" --write",
     "validate": "npm run lint && npm run test:coverage && npm run build && npm run bundlesize",
     "bundlesize": "bundlesize",
