--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,9 @@
 {
+  "extends": "@gilbarbara/tsconfig",
   "compilerOptions": {
-    "declaration": true,
     "downlevelIteration": true,
-    "forceConsistentCasingInFileNames": true,
     "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "commonjs",
-    "moduleResolution": "node",
     "outDir": "./lib",
-    "skipLibCheck": true,
-    "strict": true,
     "target": "es5"
   },
   "include": ["src/**/*"]
