--- a/package.json
+++ b/package.json
@@ -32,41 +32,42 @@
   },
   "devDependencies": {
     "@gilbarbara/tsconfig": "^0.1.0",
-    "@size-limit/preset-small-lib": "^3.0.0",
-    "@types/enzyme": "^3.10.4",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.6",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
-    "del-cli": "^3.0.0",
+    "@size-limit/preset-small-lib": "^4.5.0",
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "del-cli": "^3.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "fetch-mock": "^8.3.1",
-    "husky": "^4.0.6",
-    "is-ci-cli": "^2.0.0",
-    "jest": "^24.9.0",
-    "jest-chain": "^1.1.2",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "fetch-mock": "^9.10.1",
+    "husky": "^4.2.5",
+    "is-ci-cli": "^2.1.1",
+    "jest": "^26.0.1",
+    "jest-chain": "^1.1.5",
     "jest-enzyme": "^7.1.2",
-    "jest-extended": "^0.11.2",
-    "jest-watch-typeahead": "^0.4.2",
-    "prettier": "^1.19.1",
+    "jest-extended": "^0.11.5",
+    "jest-watch-typeahead": "^0.6.0",
+    "prettier": "^2.0.5",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "repo-tools": "^0.2.0",
-    "serve": "^11.3.0",
-    "start-server-and-test": "^1.10.6",
-    "ts-jest": "^24.3.0",
-    "typescript": "^3.7.4"
+    "serve": "^11.3.2",
+    "size-limit": "^4.5.1",
+    "start-server-and-test": "^1.11.0",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "build": "npm run clean && npm run build:cjs && npm run build:esm",
@@ -79,8 +80,8 @@
     "test:watch": "jest --watch --verbose",
     "lint": "eslint --ext .ts,.tsx src test",
     "format": "prettier \"**/*.{js,jsx,json,yml,yaml,css,less,scss,ts,tsx,md,graphql,mdx}\" --write",
-    "validate": "npm run lint && npm run test:coverage && npm run size",
-    "size": "npm run build && size-limit",
+    "validate": "npm run lint && npm run test:coverage && npm run build && npm run size",
+    "size": "size-limit",
     "prepublishOnly": "npm run validate"
   },
   "prettier": {
