--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.4.2",
   "description": "Convert HTML/XML source code or DOM nodes to React elements",
   "author": "Gil Barbara <gilbarbara@gmail.com>",
+  "keywords": [
+    "string",
+    "DOM",
+    "converter",
+    "react",
+    "component"
+  ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/gilbarbara/react-from-dom.git"
@@ -20,64 +28,56 @@
   ],
   "types": "./lib",
   "sideEffects": false,
-  "license": "MIT",
-  "keywords": [
-    "string",
-    "DOM",
-    "converter",
-    "react",
-    "component"
-  ],
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0"
   },
+  "dependencies": {},
   "devDependencies": {
     "@gilbarbara/tsconfig": "^0.1.0",
-    "@size-limit/preset-small-lib": "^4.5.1",
-    "@types/enzyme": "^3.10.5",
+    "@size-limit/preset-small-lib": "^4.6.0",
+    "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.0",
-    "@types/node": "^14.0.13",
-    "@types/react": "^16.9.38",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "del-cli": "^3.0.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "fetch-mock": "^9.10.1",
-    "husky": "^4.2.5",
-    "is-ci-cli": "^2.1.1",
-    "jest": "^26.0.1",
+    "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "fetch-mock": "^9.10.7",
+    "husky": "^4.3.0",
+    "is-ci-cli": "^2.1.2",
+    "jest": "^26.4.2",
     "jest-chain": "^1.1.5",
     "jest-enzyme": "^7.1.2",
     "jest-extended": "^0.11.5",
-    "jest-watch-typeahead": "^0.6.0",
-    "prettier": "^2.0.5",
-    "react": "^16.12.0",
+    "jest-watch-typeahead": "^0.6.1",
+    "prettier": "^2.1.2",
+    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "repo-tools": "^0.2.0",
     "serve": "^11.3.2",
-    "size-limit": "^4.5.1",
-    "start-server-and-test": "^1.11.0",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "size-limit": "^4.6.0",
+    "ts-jest": "^26.4.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "build": "npm run clean && npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc",
     "build:esm": "tsc -m es6 --outDir esm",
-    "clean": "del lib/* && del esm/*",
     "watch:cjs": "npm run build:cjs -- -w",
     "watch:esm": "npm run build:esm -- -w",
+    "clean": "del lib/* && del esm/*",
     "test": "is-ci \"test:coverage\" \"test:watch\"",
     "test:coverage": "jest --coverage --bail",
     "test:watch": "jest --watch --verbose",
