--- a/package.json
+++ b/package.json
@@ -29,47 +29,47 @@
   "types": "./lib",
   "sideEffects": false,
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "dependencies": {},
   "devDependencies": {
     "@gilbarbara/tsconfig": "^0.1.0",
-    "@size-limit/preset-small-lib": "^4.6.0",
-    "@types/enzyme": "^3.10.7",
+    "@size-limit/preset-small-lib": "^4.9.1",
+    "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.13",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "del-cli": "^3.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fetch-mock": "^9.10.7",
-    "husky": "^4.3.0",
+    "husky": "^4.3.5",
     "is-ci-cli": "^2.1.2",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "jest-chain": "^1.1.5",
     "jest-enzyme": "^7.1.2",
     "jest-extended": "^0.11.5",
     "jest-watch-typeahead": "^0.6.1",
-    "prettier": "^2.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "repo-tools": "^0.2.0",
+    "prettier": "^2.2.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "repo-tools": "^0.2.1",
     "serve": "^11.3.2",
-    "size-limit": "^4.6.0",
-    "ts-jest": "^26.4.0",
-    "typescript": "^4.0.3"
+    "size-limit": "^4.9.1",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "build": "npm run clean && npm run build:cjs && npm run build:esm",
