--- a/package.json
+++ b/package.json
@@ -32,43 +32,37 @@
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "devDependencies": {
+    "@gilbarbara/eslint-config": "^0.1.4",
+    "@gilbarbara/prettier-config": "^0.1.0",
     "@gilbarbara/tsconfig": "^0.1.0",
-    "@size-limit/preset-small-lib": "^4.9.2",
-    "@types/enzyme": "^3.10.8",
+    "@size-limit/preset-small-lib": "^5.0.1",
+    "@types/enzyme": "^3.10.9",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.28",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "del-cli": "^3.0.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.0",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "del-cli": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "fetch-mock": "^9.11.0",
     "husky": "^4.3.8",
     "is-ci-cli": "^2.2.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "jest-chain": "^1.1.5",
     "jest-enzyme": "^7.1.2",
     "jest-extended": "^0.11.5",
-    "jest-watch-typeahead": "^0.6.1",
-    "prettier": "^2.2.1",
+    "jest-watch-typeahead": "^0.6.4",
+    "prettier": "^2.3.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "repo-tools": "^0.2.1",
-    "serve": "^11.3.2",
-    "size-limit": "^4.9.2",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5"
+    "repo-tools": "^0.2.2",
+    "serve": "^12.0.0",
+    "size-limit": "^5.0.1",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "build": "npm run clean && npm run build:cjs && npm run build:esm",
@@ -77,21 +71,20 @@
     "watch:cjs": "npm run build:cjs -- -w",
     "watch:esm": "npm run build:esm -- -w",
     "clean": "del lib/* && del esm/*",
+    "lint": "eslint --ext .ts,.tsx src test",
     "test": "is-ci \"test:coverage\" \"test:watch\"",
     "test:coverage": "jest --coverage --bail",
-    "test:watch": "jest --watch --verbose",
-    "lint": "eslint --ext .ts,.tsx src test",
+    "test:watch": "jest --watchAll --verbose",
+    "typecheck": "tsc --noEmit",
     "format": "prettier \"**/*.{js,jsx,json,yml,yaml,css,less,scss,ts,tsx,md,graphql,mdx}\" --write",
-    "validate": "npm run lint && npm run test:coverage && npm run build && npm run size",
+    "validate": "npm run lint && npm run typecheck && npm run test:coverage && npm run build && npm run size",
     "size": "size-limit",
     "prepublishOnly": "npm run validate"
   },
-  "prettier": {
-    "jsxBracketSameLine": false,
-    "printWidth": 100,
-    "singleQuote": true,
-    "trailingComma": "all"
+  "eslintConfig": {
+    "extends": ["@gilbarbara/eslint-config"]
   },
+  "prettier": "@gilbarbara/prettier-config",
   "size-limit": [
     {
       "path": "./lib/index.js",
