--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "DOM",
     "converter",
     "react",
-    "component"
+    "component",
+    "dangerouslySetInnerHTML"
   ],
   "license": "MIT",
   "repository": {
@@ -29,40 +30,32 @@
   "types": "./lib",
   "sideEffects": false,
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@gilbarbara/eslint-config": "^0.1.4",
+    "@gilbarbara/eslint-config": "^0.2.1",
     "@gilbarbara/prettier-config": "^0.1.0",
     "@gilbarbara/tsconfig": "^0.1.0",
-    "@size-limit/preset-small-lib": "^5.0.1",
-    "@types/enzyme": "^3.10.9",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.0",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "del-cli": "^4.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "fetch-mock": "^9.11.0",
-    "husky": "^4.3.8",
+    "@size-limit/preset-small-lib": "^7.0.8",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^18.0.3",
+    "@types/react-dom": "^18.0.0",
+    "del-cli": "^4.0.1",
+    "husky": "^7.0.4",
     "is-ci-cli": "^2.2.0",
-    "jest": "^27.0.6",
-    "jest-chain": "^1.1.5",
-    "jest-enzyme": "^7.1.2",
-    "jest-extended": "^0.11.5",
-    "jest-watch-typeahead": "^0.6.4",
-    "prettier": "^2.3.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "jest": "^27.5.1",
+    "jest-extended": "^2.0.0",
+    "jest-watch-typeahead": "^1.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "repo-tools": "^0.2.2",
-    "serve": "^12.0.0",
-    "size-limit": "^5.0.1",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5"
+    "size-limit": "^7.0.8",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "build": "npm run clean && npm run build:cjs && npm run build:esm",
@@ -79,7 +72,8 @@
     "format": "prettier \"**/*.{js,jsx,json,yml,yaml,css,less,scss,ts,tsx,md,graphql,mdx}\" --write",
     "validate": "npm run lint && npm run typecheck && npm run test:coverage && npm run build && npm run size",
     "size": "size-limit",
-    "prepublishOnly": "npm run validate"
+    "prepublishOnly": "npm run validate",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -89,18 +83,14 @@
   "prettier": "@gilbarbara/prettier-config",
   "size-limit": [
     {
+      "name": "lib",
       "path": "./lib/index.js",
-      "limit": "5 kB"
+      "limit": "6 kB"
     },
     {
+      "name": "esm",
       "path": "./esm/index.js",
-      "limit": "5 kB"
+      "limit": "6 kB"
     }
-  ],
-  "husky": {
-    "hooks": {
-      "post-merge": "repo-tools install-packages",
-      "pre-commit": "repo-tools check-remote && npm run validate"
-    }
-  }
+  ]
 }
