--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,31 +26,40 @@ jobs:
           timezone: America/Sao_Paulo
 
       - name: Setup repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: '14.x'
+          node-version: 20
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Cache Packages
-        id: cache
-        uses: actions/cache@v2
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          version: 8
+          run_install: false
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-node-
-        timeout-minutes: 1
+            ${{ runner.os }}-pnpm-store-
 
       - name: Install Packages
-        run: npm ci
+        run: pnpm install
         timeout-minutes: 3
 
-      - name: Validate
+      - name: Validate and Build
         if: "!startsWith(github.ref, 'refs/tags/')"
-        run: npm run validate
+        run: pnpm run validate
         timeout-minutes: 3
 
       - name: Publish code coverage
