--- a/package.json
+++ b/package.json
@@ -33,29 +33,30 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@gilbarbara/eslint-config": "^0.2.1",
-    "@gilbarbara/prettier-config": "^0.1.0",
-    "@gilbarbara/tsconfig": "^0.1.0",
-    "@size-limit/preset-small-lib": "^7.0.8",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.3",
-    "@types/react-dom": "^18.0.0",
-    "del-cli": "^4.0.1",
-    "husky": "^7.0.4",
+    "@gilbarbara/eslint-config": "^0.7.4",
+    "@gilbarbara/prettier-config": "^1.0.0",
+    "@gilbarbara/tsconfig": "^0.2.3",
+    "@size-limit/preset-small-lib": "^11.0.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.21",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "del-cli": "^5.1.0",
+    "husky": "^9.0.11",
     "is-ci-cli": "^2.2.0",
-    "jest": "^27.5.1",
-    "jest-extended": "^2.0.0",
-    "jest-watch-typeahead": "^1.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "repo-tools": "^0.2.2",
-    "size-limit": "^7.0.8",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-extended": "^4.0.2",
+    "jest-watch-typeahead": "^2.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "repo-tools": "^0.3.1",
+    "size-limit": "^11.0.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "build": "npm run clean && npm run build:cjs && npm run build:esm",
@@ -73,7 +74,7 @@
     "validate": "npm run lint && npm run typecheck && npm run test:coverage && npm run build && npm run size",
     "size": "size-limit",
     "prepublishOnly": "npm run validate",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
