--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "downlevelIteration": true,
     "lib": ["dom", "dom.iterable", "esnext"],
-    "outDir": "./lib",
-    "target": "es5"
+    "noEmit": true,
+    "target": "ES2022"
   },
   "include": ["src/**/*"]
 }
