--- a/package.json
+++ b/package.json
@@ -44,25 +44,24 @@
     "@swc/core": "^1.4.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.21",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/coverage-v8": "^1.3.1",
     "del-cli": "^5.1.0",
     "husky": "^9.0.11",
     "is-ci-cli": "^2.2.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "jest-extended": "^4.0.2",
-    "jest-watch-typeahead": "^2.2.2",
+    "jsdom": "^24.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "repo-tools": "^0.3.1",
     "size-limit": "^11.0.2",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   },
   "scripts": {
     "build": "npm run clean && tsup",
@@ -70,8 +69,8 @@
     "clean": "del dist/*",
     "lint": "eslint --fix src test",
     "test": "is-ci \"test:coverage\" \"test:watch\"",
-    "test:coverage": "jest --coverage --bail",
-    "test:watch": "jest --watchAll --verbose",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
     "typecheck": "tsc",
     "typevalidation": "attw -P",
     "format": "prettier \"**/*.{js,jsx,json,yml,yaml,css,less,scss,ts,tsx,md,graphql,mdx}\" --write",
